# celeste

./: README.md  pyproject.toml
src/celeste/: __init__.py  grammar.py  llm.py
src/celeste/samplers/: __init__.py  base.py  mcmc.py  rejection.py
src/celeste/utils/: __init__.py  grammar_logits_processor.py  helpers.py  llguidance_recognizer.py  oracle_logits_processor.py  oracle_trie.py  scoring.py
tests/: test_celeste.py
